[package]
name = "token-client"
version = "0.1.0"
authors = ["Tristan King <tristan.king@gmail.com>"]

[dependencies]
protobuf = "1.2"
lazy_static = "0.2"
rand = "0.3"
rust-crypto = "^0.2"
curl = "0.4.6"
futures = "0.1.10"
tokio-core = "0.1"
tokio-curl = "0.1"
rusqlite = "0.9.5"
time = "0.1"
docopt = "0.7"
rustc-serialize = "0.3"
tiny-keccak = "1.1"
secp256k1 = "0.6.0"
json = "0.11"
rpassword = "0.3"