[package]
name = "token-client"
version = "0.1.0"
authors = ["Tristan King <tristan.king@gmail.com>"]

[dependencies]
protobuf = "1.2"
lazy_static = "0.2"
rand = "0.3"
rust-crypto = "^0.2"
curl = "0.4.6"
rusqlite = "0.10.1"
time = "0.1"
docopt = "0.7"
rustc-serialize = "0.3"
tiny-keccak = "1.1"
secp256k1 = "0.6.0"
json = "0.11"
rpassword = "0.3"
url = "1.0"
openssl = "0.9"
rlp = "0.1.0"
bigint = "1.0.1"

[dependencies.ws]
version = "0.7.0"
features = ["ssl"]