[package]
name = "bighash"
version = "0.1.0"
license = "MIT"
authors = ["Tristan King <tristan@bakkenbaeck.no>"]

[dependencies]
libc = "0.2"
rustc-hex = "1.0"
rand = "0.3.12"
bigint = { git = "https://github.com/paritytech/bigint", rev = "58fa622b" }
heapsize = { version = "0.4", optional = true }

[features]
x64asm_arithmetic=[]
rust_arithmetic=[]
heapsizeof = ["heapsize", "bigint/heapsizeof"]