[package]
name = "eth"
version = "0.1.0"
authors = ["Tristan King <tristan.king@gmail.com>"]

[dependencies]
rand = "*"
rustc-hex = "*"
lazy_static = "*"
bigint = { git = "https://github.com/paritytech/bigint", rev = "58fa622b" }
rlp = { path = "../rlp-rs" }
bip39 = "*"
tiny-keccak = "*"
secp256k1 = "*"
rust-crypto = "*"