[package]
name = "signal"
version = "0.1.0"
authors = ["Tristan King <tristan.king@gmail.com>"]
build = "build.rs"

[features]
sqlite-store = ["rusqlite"]

[dependencies]
mod_path = { path = "../mod_path" }
protobuf = "*"
time = "*"
rand = "*"
rustc-serialize = "*"
rust-crypto = "*"
rusqlite = { version = "0.11.0", optional = true }

[build-dependencies.protobuf_build]
git = "https://github.com/plietar/rust-protobuf-build"
