[package]
name = "token-cli"
version = "0.1.0"
authors = ["Tristan King <tristan.king@gmail.com>"]
build = "build.rs"

[dependencies]
mod_path = { path = "../mod_path" }
protobuf = "*"
docopt = "*"
rand = "*"
rusqlite = "*"
rustc-serialize = "*"
rpassword = "*"
eth = { path = "../eth-rs" }
signal = { path = "../signal-rs", features = ["sqlite-store"] }
token-services = { path = "../token-services-rs" }

[build-dependencies.protobuf_build]
git = "https://github.com/plietar/rust-protobuf-build"
