[package]
name = "toshi-cli"
version = "0.1.0"
authors = ["Tristan King <tristan.king@gmail.com>"]
build = "build.rs"
exclude = ["*.db"]

[dependencies]
mod_path = { path = "../mod_path" }
protobuf = "*"
serde = "*"
serde_derive = "*"
docopt = "*"
rand = "*"
rusqlite = "*"
rustc-serialize = "*"
rpassword = "*"
eth = { path = "../eth-rs" }
signal = { path = "../signal-rs", features = ["sqlite-store"] }
toshi-services = { path = "../toshi-services-rs" }

[build-dependencies.protobuf_build]
git = "https://github.com/plietar/rust-protobuf-build"
